Tweak native image build args to fix warnings re https://github.com/jline/jline3/issues/1067.